# pkg_main

./: Makefile  README.md  pyproject.toml  requirements-tools.txt  requirements.txt
src/pkg_main/: __main__.py
